--- a/centeringrecyclerview/build.gradle
+++ b/centeringrecyclerview/build.gradle
@@ -22,3 +22,92 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
 }
+
+apply plugin: 'com.github.dcendents.android-maven'
+apply plugin: 'com.jfrog.bintray'
+
+group = 'org.mightyfrog.centeringrecyclerview'
+version = '1.0.0'
+def siteUrl = 'https://github.com/mightyfrog/centering-recycler-view'
+def gitUrl = 'https://github.com/mightyfrog/centering-recycler-view.git'
+
+bintray {
+    user = bintray_user
+    key = bintray_api_key
+
+    configurations = ['archives'] //When uploading configuration files
+    pkg {
+        repo = 'maven'
+        name = 'centering-recycler-view'
+        desc = 'Android Centering RecyclerView'
+        websiteUrl = siteUrl
+        issueTrackerUrl = 'https://github.com/mightyfrog/centering-recycler-view/issues'
+        vcsUrl = gitUrl
+        licenses = ['Apache-2.0']
+        labels = ['android']
+        publicDownloadNumbers = true
+    }
+}
+
+install {
+    repositories.mavenInstaller {
+        pom {
+            project {
+                packaging 'aar'
+                name 'centering-recycler-view'
+                url siteUrl
+                licenses {
+                    license {
+                        name 'The Apache Software License, Version 2.0'
+                        url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                    }
+                }
+                developers {
+                    developer {
+                        id 'mightyfrog'
+                        name 'Shigehiro Soejima'
+                        email 'android@mightyfrog.org'
+                    }
+                }
+                scm {
+                    connection 'https://github.com/mightyfrog/centering-recycler-view.git'
+                    developerConnection 'https://github.com/mightyfrog/centering-recycler-view.git'
+                    url siteUrl
+                }
+            }
+        }
+    }
+}
+
+task sourcesJar(type: Jar) {
+    from android.sourceSets.main.java.srcDirs
+    classifier = 'sources'
+}
+
+task javadoc(type: Javadoc) {
+    source = android.sourceSets.main.java.srcDirs
+    classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
+}
+
+task javadocJar(type: Jar, dependsOn: javadoc) {
+    classifier = 'javadoc'
+    from javadoc.destinationDir
+}
+artifacts {
+    archives javadocJar
+    archives sourcesJar
+}
+
+task findConventions << {
+    println project.getConvention()
+}
+
+allprojects {
+    repositories {
+        jcenter()
+    }
+}
+
+task clean(type: Delete) {
+    delete rootProject.buildDir
+}
