--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion "24.0.0"
+    compileSdkVersion 25
+    buildToolsVersion "24.0.3"
 
     defaultConfig {
         applicationId "org.mightyfrog.centeringrecyclerviewdemo"
-        minSdkVersion 7
-        targetSdkVersion 24
+        minSdkVersion 14
+        targetSdkVersion 25
         versionCode 1
         versionName "1.0"
         multiDexEnabled true
@@ -20,8 +20,10 @@ android {
     }
 }
 
+def supportLibVer = "25.0.1"
+
 dependencies {
-    compile 'com.android.support:appcompat-v7:24.0.0'
-    compile 'com.android.support:design:24.0.0'
+    compile "com.android.support:appcompat-v7:${supportLibVer}"
+    compile "com.android.support:design:${supportLibVer}"
     compile project(':centeringrecyclerview')
 }
