--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,9 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    ext.version_name = "1.1.5"
+    ext.support_lib_version = "25.3.0"
+
     repositories {
         jcenter()
     }
