--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ jdk: oraclejdk8
 
 before_install:
   - chmod +x gradlew
+  - yes | sdkmanager "platforms;android-28"
 
 android:
   components:
@@ -12,17 +13,17 @@ android:
     - tools
 
     # The BuildTools version used by your project
-    - build-tools-25.0.3
+    - build-tools-28.0.0
 
     # The SDK version used to compile your project
-    - android-25
+    - android-28
 
     # Additional components
     - extra-google-google_play_services
     - extra-google-m2repository
     - extra-android-m2repository
-    - addon-google_apis-google-25
+    - addon-google_apis-google-28
 
     # Specify at least one system image,
     # if you need to run emulator(s) during your tests
-    - sys-img-armeabi-v7a-android-25
+    - sys-img-armeabi-v7a-android-28
