--- a/centeringrecyclerview/build.gradle
+++ b/centeringrecyclerview/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.3"
+    compileSdkVersion 28
+    buildToolsVersion "28.0.0"
 
     defaultConfig {
         minSdkVersion 14
-        targetSdkVersion 25
-        versionCode 17
+        targetSdkVersion 28
+        versionCode 18
         versionName "$version_name"
         consumerProguardFiles 'proguard-rules.pro'
     }
@@ -23,8 +23,8 @@ android {
 }
 
 dependencies {
-    compile "com.android.support:appcompat-v7:$support_lib_version"
-    compile "com.android.support:design:$support_lib_version"
+    implementation "com.android.support:appcompat-v7:$support_lib_version"
+    implementation "com.android.support:design:$support_lib_version"
 }
 
 apply plugin: 'com.github.dcendents.android-maven'
