--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -24,8 +24,8 @@ android {
 }
 
 dependencies {
-    implementation "com.android.support:appcompat-v7:$support_lib_version"
-    implementation "com.android.support:design:$support_lib_version"
+    implementation "androidx.appcompat:appcompat:$support_lib_version"
+    implementation "com.google.android.material:material:$support_lib_version"
     implementation "org.mightyfrog.centeringrecyclerview:centeringrecyclerview:1.1.7"
 //        implementation project(':centeringrecyclerview')
 }
