--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@
 
 buildscript {
     ext.version_name = "1.1.7"
-    ext.support_lib_version = "28.0.0-rc01"
+    ext.support_lib_version = '1.0.0-rc01'
 
     repositories {
         google()
