--- a/centeringrecyclerview/build.gradle
+++ b/centeringrecyclerview/build.gradle
@@ -22,8 +22,8 @@ android {
 }
 
 dependencies {
-    implementation "androidx.appcompat:appcompat:$support_lib_version"
-    implementation "com.google.android.material:material:$support_lib_version"
+    implementation "androidx.appcompat:appcompat:1.1.0-alpha03"
+    implementation "com.google.android.material:material:1.1.0-alpha04"
 }
 
 apply plugin: 'com.github.dcendents.android-maven'
