--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -23,8 +23,8 @@ android {
 }
 
 dependencies {
-    implementation "androidx.appcompat:appcompat:$support_lib_version"
-    implementation "com.google.android.material:material:$support_lib_version"
+    implementation "androidx.appcompat:appcompat:1.1.0-alpha03"
+    implementation "com.google.android.material:material:1.1.0-alpha04"
     implementation "org.mightyfrog.centeringrecyclerview:centeringrecyclerview:1.1.7"
 //        implementation project(':centeringrecyclerview')
 }
